minor changes toi tags and base

--- a/songeek-project/templates/songeek/base.html
+++ b/songeek-project/templates/songeek/base.html
@@ -21,6 +21,9 @@
         <hr />
         <div>
             <ul>
+                <li><a href="{% url 'songeek:index' %}">Home</a></li>
+                <a href="{% url 'songeek:login' %}">Login</a>
+                <a href="{% url 'songeek:register' %}">Register</a>
             </ul>
         </div>
     </body>
