--- a/songeek-project/templates/songeek/base.html
+++ b/songeek-project/templates/songeek/base.html
@@ -22,8 +22,8 @@
         <div>
             <ul>
                 <li><a href="{% url 'songeek:index' %}">Home</a></li>
-                <a href="{% url 'songeek:login' %}">Login</a>
-                <a href="{% url 'songeek:register' %}">Register</a>
+                <li><a href="{% url 'songeek:login' %}">Login</a></li>
+                <li><a href="{% url 'songeek:register' %}">Register</a></li>
             </ul>
         </div>
     </body>
