--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -6,5 +6,13 @@
 {% endblock %}
 
 {% block body_block %}
+{% for album in albums %}
+    <a href="{% url 'songeek:album_list' album.slug %}">
+        <img src="{{ album.cover.url }}" alt="{{ album.title }}" width="150">
+        <h2>{{ album.title }}</h2>
+        <p>By {{ album.artist }}</p>
+    </a>
+{% endfor %}
+</hr>
     <a href="{% url 'songeek:add_album' %}">Add Album</a>
 {% endblock %}
