Added the 'add_song_to_playlist' form and removed playlist selection for the moment. Further testing needed

--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -19,5 +19,6 @@
 <ul>
     <li><a href="{% url 'songeek:add_album' %}">Add Album</a></li>
     <li><a href="{% url 'songeek:album_list' %}">See All Albums</a></li>
+    <li><a href="{% url 'songeek:add_song_to_playlist' %}">Add a song to a playlist</a></li>
 </ul>
 {% endblock %}
