non-working playlist form and other function, changes to come'

--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -17,8 +17,8 @@
 </ul>   
 </hr>
 <ul>
-    <li><a href="{% url 'songeek:add_album' %}">Add Album</a></li>
-    <li><a href="{% url 'songeek:album_list' %}">See All Albums</a></li>
     <li><a href="{% url 'songeek:add_song_to_playlist' %}">Add a song to a playlist</a></li>
+    <li><a href="{% url 'songeek:new_playlist' %}">Create a new Playlist</a></li>
+    <li><a href="{% url 'songeek:profile' %}">Profile</a></li>
 </ul>
 {% endblock %}
