--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -9,8 +9,8 @@
 <ul>
 {% for album in albums %}
 <li>
-    <img src="{{ album.cover.url }}" alt="{{ album.title }}" width="150">
-    <h2>{{ album.title }}</h2>
+    <img src="{{ album.cover.url }}" alt="{{ album.name }}" width="150">
+    <h2>{{ album.name }}</h2>
     <p>By {{ album.artist }}</p>
 </li>  
 {% endfor %}
