--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -8,10 +8,13 @@
 {% block body_block %}
 <ul>
 {% for album in albums %}
+
 <li>
+    <a href="{% url 'songeek:show_album' album.slug %}">
     <img src="{{ album.cover.url }}" alt="{{ album.name }}" width="150">
     <h2>{{ album.name }}</h2>
     <p>By {{ album.artist }}</p>
+    </a>
 </li>  
 {% endfor %}
 </ul>   
