Bug fixes on album.html

--- a/songeek-project/templates/songeek/album.html
+++ b/songeek-project/templates/songeek/album.html
@@ -15,7 +15,7 @@
         {% if songs %}
         <ul>
             {% for song in songs %}
-                <li>{{ song.name }}</li>
+                <li>{{ song.title }} - {{ song.length}}</li>
             {% endfor %}
         </ul>
         {% else %}
