--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -15,9 +15,18 @@
     <h2>{{ album.name }}</h2>
     <p>By {{ album.artist }}</p>
     </a>
-</li>  
+</li>
+
 {% endfor %}
 </ul>   
+</hr>
+{% if songs %}
+<ul>
+{% for song in songs %}
+    <li>{{ song.title }} - {{ song.length }} - {{ song.album.artist }}</li>
+{% endfor %}
+</ul>
+{% endif %}
 </hr>
 <ul>
     <li><a href="{% url 'songeek:add_song_to_playlist' %}">Add a song to a playlist</a></li>
