--- a/songeek-project/templates/songeek/add_song_to_playlist.html
+++ b/songeek-project/templates/songeek/add_song_to_playlist.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add a song to the playlist</h1>
+    <h1>Add a song to the {{ playlist.name }}</h1>
     <div>
-        <form id="song_to_playlist_form" method="post" action="{% url 'songeek:add_song_to_playlist' %}" enctype="multipart/form-data">
+        <form id="song_to_playlist_form" method="post" action="{% url 'songeek:add_song_to_playlist' playlist.slug %}" enctype="multipart/form-data">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
