--- a/songeek-project/templates/songeek/profile.html
+++ b/songeek-project/templates/songeek/profile.html
@@ -11,12 +11,14 @@
     <div>
         {% for playlist in playlists %}
             <div>
+                <a href="{% url 'songeek:show_playlist' playlist.slug %}">
                 <h3>{{ playlist.name }}</h3>
                 {% if playlist.cover %}
                     <img src="{{ playlist.cover.url }}" alt="{{ playlist.name }}" width="200">
                 {% else %}
                     <p>No cover image</p>
                 {% endif %}
+                </a>
             </div>
         {% empty %}
             <p>You have no playlists.</p>
