--- a/songeek-project/templates/songeek/base.html
+++ b/songeek-project/templates/songeek/base.html
@@ -14,6 +14,12 @@
     </head>
     <body>
         <div>
+            <form action="{% url 'songeek:search_results' %}" method="GET">
+                <input type="text" name="q" placeholder="Search albums or songs..." required>
+                <button type="submit">Search</button>
+            </form>
+        </div>
+        <div>
             {% block body_block %}
             {% endblock %}
         </div>
