--- a/songeek-project/templates/songeek/register.html
+++ b/songeek-project/templates/songeek/register.html
@@ -5,18 +5,39 @@
     Register
 {% endblock %}
 
+{% block body_class %}base-page base-box register-page{% endblock %}
+
 {% block body_block %}
-    <h1>Register for Songeek</h1>
+<div class="login-box">
+    <div class="logo">
+        <img src="{% static 'images/headphones.png' %}" class="logoimg" alt="Headphones">
+        <h1>Sign up for Songeek</h1>
+    </div>
+
     {% if registered %}
         <strong>You're now a listener!</strong>
     {% else %}
-        <strong>Register here!</strong><br />
         <form id="user_form" method="post" action="{% url 'songeek:register' %}" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ user_form.as_p }}
-            {{ profile_form.as_p }}
 
-            <input type="submit" name="submit" value="Register" />
+            <div class="input-container">
+                <label for="id_username">Username</label>
+                {{ user_form.username }}
+            </div>
+
+            <div class="input-container">
+                <label for="id_email">Email</label>
+                {{ user_form.email }}
+            </div>
+
+            <div class="input-container">
+                <label for="id_password_reg">Password</label>
+                {{ user_form.password_reg }}
+            </div>
+
+            <button type="submit">Sign Up</button>
         </form>
-    {% endif %}
+        <p>Already have an account? <a href="{% url 'songeek:login' %}" class="signup-link">Log in</a></p>
+        {% endif %}
+    </div>
 {% endblock %}
