--- a/songeek-project/templates/songeek/base.html
+++ b/songeek-project/templates/songeek/base.html
@@ -13,7 +13,7 @@
         </title>
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
-    <body>
+    <body class="{% block body_class %}{% endblock %}">
         <div>
             {% block body_block %}
             {% endblock %}
