--- a/songeek-project/templates/songeek/login.html
+++ b/songeek-project/templates/songeek/login.html
@@ -5,11 +5,13 @@
     Login
 {% endblock %}
 
+{% block body_class %}base-page base-box login-page{% endblock %}
+
 {% block body_block %}
     <div class="login-container">
         <div class="login-box">
             <div class="logo">
-                <img src="{% static 'images/headphones.png' %}" alt="Headphones">
+                <img src="{% static 'images/headphones.png' %}" class="logio-img" alt="Headphones">
             </div>
 
             <div class="title-container">
@@ -52,4 +54,4 @@ function togglePassword() {
         passwordField.type = "password";
     }
 }
-</script>
+</script>    
