--- a/songeek-project/templates/songeek/register.html
+++ b/songeek-project/templates/songeek/register.html
@@ -8,36 +8,49 @@
 {% block body_class %}base-page base-box register-page{% endblock %}
 
 {% block body_block %}
-<div class="login-box">
-    <div class="logo">
-        <img src="{% static 'images/headphones.png' %}" class="logoimg" alt="Headphones">
-        <h1>Sign up for Songeek</h1>
+<div class="register-container">
+    <div class="register-box">
+        <div class="logo">
+            <img src="{% static 'images/headphones.png' %}" class="logoimg" alt="Headphones">
+        </div>
+
+            <div class="title-container">
+                <h1>Sign up for Songeek</h1>
+        </div>
+
+        {% if registered %}
+            <strong>You're now a listener!</strong>
+        {% else %}
+            <form id="user_form" method="post" action="{% url 'songeek:register' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+
+                <div class="input-container">
+                    <label for="id_username">Username</label>
+                    {{ user_form.username }}
+                </div>
+
+                <div class="input-container">
+                    <label for="id_email">Email</label>
+                    {{ user_form.email }}
+                </div>
+
+                <div class="input-container">
+                    <label for="id_password">Password</label>
+                    {{ user_form.password }}
+                </div>
+
+                <button type="submit">Sign Up</button>
+            </form>
+
+            <div class="signup-link">
+            <p>Already have an account? <a href="{% url 'songeek:login' %}" class="signup-link">Log in</a>
+                </div>
+            </p>
+            {% endif %}
+        </div>
     </div>
 
-    {% if registered %}
-        <strong>You're now a listener!</strong>
-    {% else %}
-        <form id="user_form" method="post" action="{% url 'songeek:register' %}" enctype="multipart/form-data">
-            {% csrf_token %}
-
-            <div class="input-container">
-                <label for="id_username">Username</label>
-                {{ user_form.username }}
-            </div>
-
-            <div class="input-container">
-                <label for="id_email">Email</label>
-                {{ user_form.email }}
-            </div>
-
-            <div class="input-container">
-                <label for="id_password_reg">Password</label>
-                {{ user_form.password_reg }}
-            </div>
-
-            <button type="submit">Sign Up</button>
-        </form>
-        <p>Already have an account? <a href="{% url 'songeek:login' %}" class="signup-link">Log in</a></p>
-        {% endif %}
-    </div>
+<div class="footer">
+    <img src="{% static 'images/headphones_footer.png' %}" alt="Footer">
+</div>
 {% endblock %}
