--- a/songeek-project/templates/songeek/index.html
+++ b/songeek-project/templates/songeek/index.html
@@ -8,18 +8,20 @@
 {% block body_block %}
 <ul>
 {% for album in albums %}
-
 <li>
     <a href="{% url 'songeek:show_album' album.slug %}">
-    <img src="{{ album.cover.url }}" alt="{{ album.name }}" width="150">
-    <h2>{{ album.name }}</h2>
-    <p>By {{ album.artist }}</p>
+        {% if album.cover %}
+            <img src="{{ album.cover.url }}" alt="{{ album.name }}" width="150">
+        {% else %}
+            <img src="{% static 'default_cover.jpg' %}" alt="Default cover" width="150">
+        {% endif %}
+        <h2>{{ album.name }}</h2>
+        <p>By {{ album.artist }}</p>
     </a>
 </li>
-
 {% endfor %}
 </ul>   
-</hr>
+<hr>
 {% if songs %}
 <ul>
 {% for song in songs %}
@@ -27,7 +29,7 @@
 {% endfor %}
 </ul>
 {% endif %}
-</hr>
+<hr>
 <ul>
     <li><a href="{% url 'songeek:new_playlist' %}">Create a new Playlist</a></li>
     <li><a href="{% url 'songeek:profile' %}">Profile</a></li>
