--- a/songeek-project/static/css/styles.css
+++ b/songeek-project/static/css/styles.css
@@ -1,200 +1,266 @@
-title {
-    font-family: sans-serif;
-    color: aliceblue;
+/* ask about admin access */
+
+/* general CSS */
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #A9A9A9;
+    flex-direction: column;
+    color: white;
+    padding-top: 70px;
+    min-height: 100vh;
+    font-family: 'Lucida Sans', sans-serif;
+}
+
+/* navbar */
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #A9A9A9;
+    padding: 0px 20px;
+    width: 100%;
+    z-index: 100;
+}
+
+.nav-right {
+    display: flex;
+    gap: 10px;
+}
+
+.nav-home logo {
+    width: 30px;
+    height: 30px;
+    filter: invert(1);
+}
+
+/* search bar */
+
+.nav-search {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+
+.nav-search input {
+    width: 400px;
+    padding: 8px 15px;
+    border-radius: 20px;
+    border: none;
+    background: #B0B0B0;
+    color: white;
+    font-size: 14px;
+}
+
+.nav-search input::placeholder {
+    color: #444;
+}
+
+/* profile icon */
+
+.profile-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #444;
+    margin-right: 50px;
+    cursor: pointer;
+}
+
+/* login and signup buttons */
+
+.nav-auth {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.nav-auth a {
+    margin-left: 15px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.nav-auth a:hover {
+    color: #444;
+}
+
+/* top songs */
+
+.top-songs h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.top-songs ul {
+    list-style: none;
+    padding: 0;
+}
+
+.song-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background: #B0B0B0;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+
+.song-item span {
+    margin-right: 10px;
+}
+
+.album-cover {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 15px;
+}
+
+/* music visualizer */
+.visualizer {
     text-align: center;
-    margin: auto;
+    margin: 20px 0;
+}
+
+.visualizer img {
+    width: 100%;
+    max-width: 300px;
+}
+
+/* playlists and discover section */
+.song-sections {
+    display: flex;
+    flex-direction: column;
     gap: 20px;
 }
 
-/* login page */
-
-.login-page .title-container h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 30px;
-    font-family: 'Lucida Sans', sans-serif;
-    font-size: 35px;
-    font-weight: bold;
+.section {
+    background: #B0B0B0;
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 20px;
 }
 
-/*sign up */
-
-.register-page .title-container h1 {
+.image-cards {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 30px;
-    font-family: 'Lucida Sans', sans-serif;
-    font-size: 35px;
-    font-weight: bold;
+    gap: 15px;
+    overflow-x: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: #444;
 }
 
+.card {
+    background: #333;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+    min-width: 120px;
+    flex: 1;
+}
 
-/*general CSS*/
+.card img {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+}
 
-.base-page .login-container, .base-box .register-container {
+/* login and register pages */
+.base-page {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
-    margin: auto;
+    background: linear-gradient(135deg, #1e1e1e, #383838);
+    padding: 20px;
+    box-sizing: border-box;
+    margin-top: 40px;
 }
 
-.base-page .login-box, .base-page .register-box {
+.base-box {
     background: #D3D3D3;
-    padding: 50px;
-    border-radius: 15px;
+    padding: 40px;
+    border-radius: 20px;
     text-align: center;
-    width: 400px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+    width: 100%;
+    max-width: 700px;
+    margin-top: 45px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.8);
     color: white;
-}
-
-.base-page body {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #A9A9A9;
-    font-family: 'Trebuchet MS';
     flex-direction: column;
-    position: relative;
-    margin: 0;
-}
-
-.base-page label {
-    display: block;
-    font-size: 14px;
-    text-align: left;
-    margin-bottom: 5px;
-}
-
-.base-page .logo {
-    display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 20px;
-}
-
-.base-page .logo h1 {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 10px 0;
-}
-
-.base-page .logo-img, .note-icon {
-    width: 80px;
-    height: 60px;
 }
 
 .base-box form {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    margin: 0;
+    width: 450px;
 }
 
-.base-box input {
-    width: 100%;
-    color: white;
+.base-box label {
+    display: flex;
+    font-family: Lucida Sans;
+    font-weight: bold;
+    font-size: 15px;
+    margin: 0;
+    margin-top: 15px;
 }
 
-.login-page input[type="text"],
-.login-page input[type="password"],
-.register-page input[type="text"],
-.register-page input[type="email"],
-.register-page input[type="password"] {
+.base-box input, .login-page input, .register-page input {
     width: 100%;
     padding: 12px;
     border: 2px solid #A9A9A9;
-    border-radius: 5px;
+    border-radius: 7px;
     background-color: #D3D3D3;
-    margin-bottom: 10px;
     font-size: 14px;
-    box-sizing: border-box;
     color: white;
 }
 
-.login-page input:focus,
-.register-page input:focus {
+.base-box input:focus {
     border: 2px solid white;
-    background-color: #D3D3D3;
     outline: none;
 }
-
-/*input::placeholder {
-    color: #bbb
-} */
 
 .base-box input:hover {
     border: 2px solid white;
 }
 
-.base-box .password-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-
-.base-box .password-container .eye-icon {
-    position: absolute;
-    right: 10px;
-    cursor: pointer;
-    width: 20px;
-    height: 20px;
-}
-
-.base-box .password-container .toggle-password {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    width: 20px;
-}
-
-.base-box button {
+/* buttons */
+.base-box button, .signup-link a {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     background-color: #444;
     color: white;
     border: none;
     border-radius: 25px;
     cursor: pointer;
     margin-top: 10px;
-}
-
-.base-box button:hover {
-    background-color: #333;
-}
-
-.base-box .signup-link a {
-    width: 100%;
-    padding: 5px 8px;
-    color: white;
-    background-color: #444;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: auto;
-    margin-top: 30;
     text-decoration: none;
 }
 
-.base-box .signup-link a:hover {
-    background: #333;
+.base-box button:hover, .signup-link a:hover {
+    background-color: #333;
 }
 
-.base-page .footer {
+/* footer -- see how to make one */
+.footer {
     position: absolute;
     bottom: 20px;
     right: 20px;
 }
 
-.base-page .footer img {
+.footer img {
     width: 50px;
-    height: auto;
 }
